RESOLVED FIXED11524
REGRESSION(r9842): Array.prototype.join should use ToString operator rather than calling toString on each element
https://bugs.webkit.org/show_bug.cgi?id=11524
Summary REGRESSION(r9842): Array.prototype.join should use ToString operator rather t...
Mark Rowe (bdash)
Reported 2006-11-05 21:19:04 PST
From Mitz in bug 10720: > I think this HTMLAnchorElement regression exposed a bug in > Array.prototype.toString() that was introduced when bug 3991 was fixed (r9842): > according to the spec (15.4.4.5), unlike toLocaleString(), join() (and thus > toString()) should not use the array elements' toString(), but rather apply the > ToString operator to them.
Attachments
Patch (6.29 KB, patch)
2006-11-06 00:05 PST, Mark Rowe (bdash)
mitz: review-
Patch with less stupidity (6.29 KB, patch)
2006-11-06 00:23 PST, Mark Rowe (bdash)
no flags
Patch with zero stupidity? (6.29 KB, patch)
2006-11-06 00:28 PST, Mark Rowe (bdash)
mitz: review+
Mark Rowe (bdash)
Comment 1 2006-11-06 00:05:20 PST
mitz
Comment 2 2006-11-06 00:21:00 PST
Comment on attachment 11393 [details] Patch The code change looks good. There are coding style issues (misplaced stars) and there's a typo in the bug number in the test's name, so r-.
Mark Rowe (bdash)
Comment 3 2006-11-06 00:23:08 PST
Created attachment 11394 [details] Patch with less stupidity
Mark Rowe (bdash)
Comment 4 2006-11-06 00:28:59 PST
Created attachment 11395 [details] Patch with zero stupidity?
mitz
Comment 5 2006-11-06 00:31:10 PST
Comment on attachment 11395 [details] Patch with zero stupidity? r=me
Mark Rowe (bdash)
Comment 6 2006-11-06 00:39:10 PST
Landed in r17610.
Note You need to log in before you can comment on or make changes to this bug.