2006-11-06  Mark Rowe  <bdash@webkit.org>

Reviewed by the wonderful Mitz Pettel.

        http://bugs.webkit.org/show_bug.cgi?id=11524
        Bug 11524: REGRESSION(r9842): Array.prototype.join should use ToString operator rather than calling toString on each element

        * kjs/array_object.cpp:
        (ArrayProtoFunc::callAsFunction): Use ToString operator on each element rather than calling their toString method.
2006-11-06  Mark Rowe  <bdash@webkit.org>

        Reviewed by the wonderful Mitz Pettel.

        Test for http://bugs.webkit.org/show_bug.cgi?id=11524
        Bug 11524: REGRESSION(r9842): Array.prototype.join should use ToString operator rather than calling toString on each element

        * fast/js/array-join-bug-11524-expected.txt: Added.
        * fast/js/array-join-bug-11524.html: Added.
        * fast/js/resources/array-join-bug-11524.js: Added.


Canonical link: https://commits.webkit.org/14809@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17610 268f45cc-cd09-0410-ab3c-d52691b4dbfc